--- a/public/stylesheets/tasks.css
+++ b/public/stylesheets/tasks.css
@@ -11,7 +11,7 @@ i {
 }
 
 #tasks-section > * {
-    border-top: 1px dotted #e5e5e5;
+    /* border-top: 1px dotted #e5e5e5; */
     padding: 5px;
 }
 
@@ -21,7 +21,11 @@ i {
 }
 
 #tasks-section__tasks-container {
-    padding: 5px 0 0 0;
+    padding: 0px 0 25px 0;
+}
+
+#tasks-section__tasks-container > div:first-child {
+    border-top: 1px dotted #dddddd;
 }
 
 #tasks-section__tasks-empties {
@@ -98,10 +102,8 @@ i {
 .tasks-section__task, .tasks-section__task-empty {
     display: flex;
     justify-content: space-between;
-
     height: 33px;
-    border-bottom: 1px dotted #e5e5e5;
-    border-top: 1px solid #fff;
+    border-bottom: 1px dotted #dddddd;
     padding: 2px 0;
 }
 
